--- a/Story.yml
+++ b/Story.yml
@@ -1,1 +1,36 @@
+version: "2.0"
+
+stories:
+- story: Book recommendation and discussion
+  steps:
+  - intent: greet
+    action: utter_greeting
+  - intent: ask_good_books
+    action: utter_ask_good_books
+  - intent: provide_book
+    entities:
+    - book: "Sapiens"
+    action: 
+    - slot:
+        book: "Sapiens"
+    - utter_book_recommendation
+    - utter_ask_opinion
+  - intent: provide_opinion
+    entities:
+    - opinion: "I loved it!"
+    action: 
+    - slot:
+        opinion: "I loved it!"
+    - utter_thank_opinion
+  - intent: ask_opinion
+    action: utter_ask_opinion_again
+  - intent: provide_opinion
+    entities:
+    - opinion: "It was okay"
+    action: 
+    - slot:
+        opinion: "It was okay"
+    - utter_acknowledge_opinion
+  - intent: goodbye
+    action: utter_goodbye
 
